Improve settings and enable events.